--- a/src/index.css
+++ b/src/index.css
@@ -1580,3 +1580,45 @@ header {
     height: 12px;
     width: 33px;
 }
+
+.auth-form {
+    border: 4px solid red;
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin: auto;
+    height: 200px;
+    background-color: red;
+    padding: 12px;
+    border-radius: 8px;
+}
+
+.auth-form input {
+    height: 60px;
+    font-size: 28px;
+    border-radius: 8px;
+    margin-bottom: 12px;
+    text-align: center;
+    line-height: 28px;
+    outline: none;
+    background-color: #087537;;
+}
+
+.auth-form button {
+    height: 60px;
+    background-color: green;
+    outline: none;
+    border-radius: 8px;
+}
+
+.auth-form p {
+    display: block;
+    /*margin-bottom: 22px;*/
+    align-self: center;
+    font-size: 12px;
+}
+
+.auth-form p span {
+    color: lightskyblue;
+    cursor: pointer;
+}
