--- a/src/index.css
+++ b/src/index.css
@@ -951,7 +951,7 @@ header {
 
 .toc-item-res {
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
     align-items: center;
     font-size: 9px;
     padding: 8px 15px 8px 0;
@@ -1622,3 +1622,4 @@ header {
     color: lightskyblue;
     cursor: pointer;
 }
+
