--- a/src/index.css
+++ b/src/index.css
@@ -688,6 +688,7 @@ header {
     color: #000;
     font-family: hrlB;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 #two-right {
@@ -1628,13 +1629,16 @@ header {
 .totals {
     /*border: 1px solid white;*/
     display: flex;
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
+    flex-direction: column;
     text-align: center;
+    /*padding: 0 180px;*/
 }
 
 .totals h3 {
-    display: block;
-    width: 100%;
+    /*display: block;*/
+    /*width: 100%;*/
+    /*border: 1px solid white;*/
 }
 
 .total {
@@ -1642,5 +1646,153 @@ header {
     margin: 3px;
     border-radius: 3px;
     padding: 3px;
+    /*width: 20%;*/
 }
 
+
+.modal_info {
+    border-radius: 4px;
+    background-color: #222;
+    flex: 4;
+    /*border: 1px solid white;*/
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3px;
+}
+
+.modal_info .league {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    padding-left: 0;
+    /*align-items: center;*/
+}
+
+.modal_info .league img {
+    margin-right: 4px;
+}
+
+.modal_info .totals {
+    /*border: 1px solid white;*/
+    flex: 1;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 10px;
+    padding: 8px;
+}
+
+.modal_info .totals span{
+    color: lightskyblue;
+}
+
+.modal_info .totals .kf{
+    color: #888888;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.modal_info .teams {
+    flex: 2;
+}
+
+.modal_info .league {
+    margin-top: 12px;
+}
+
+.modal_info .teams .status{
+    margin-top: 10px;
+    background-color: orange;
+}
+
+.modal_info .teams .count{
+    font-size: 14px;
+    margin-top: 6px;
+}
+
+
+.modal_info .teams .team{
+    margin-right: 4px;
+    margin-left: 4px;
+}
+
+.modal_info .teams span {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.modal_bid {
+    border-radius: 4px;
+    padding-left: 8px;
+    padding-right: 8px;
+    flex: 4;
+    /*border: 1px solid white;*/
+    display: flex;
+    flex-direction: column;
+    background-color: #222;
+    margin-bottom: 3px;
+}
+
+.modal_bid .binf {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+}
+
+.modal_bid .binf input {
+    border: none;
+    background-color: #222;
+    outline: none;
+    border-radius: 6px;
+    height: 28px;
+    text-align: center;
+}
+
+.modal_bid .binf span {
+    color: lightskyblue;
+    font-size: 22px;
+}
+
+.modal_bid .binf .win{
+    color: lightgreen;
+    font-size: 18px;
+}
+
+.modal_start {
+    flex: 2;
+    /*border: 1px solid white;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal_start button {
+    width: 60%;
+    height: 70%;
+    background-color: green;
+    color: white;
+    border-radius: 8px;
+    transition: .4s;
+}
+
+.modal_start button:hover {
+    background-color: lightgreen;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
