--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import "react-slideshow-image/dist/styles.css";
+
+
 *,
 *::before,
 *::after {
@@ -31,6 +34,7 @@ dd {
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
+    /*font-family: sans-serif;*/
     min-height: 100vh;
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
@@ -68,11 +72,13 @@ select {
 }
 
 @font-face {
+    /*font-family: sans-serif;*/
     font-family: helR;
     src: url("fonts/helvetica_regular.otf") format("opentype");
 }
 
 @font-face {
+    /*font-family: sans-serif;*/
     font-family: helB;
     src: url("fonts/helvetica_bold.otf") format("opentype");
 }
@@ -349,7 +355,8 @@ header {
     font-size: 14px;
     color: #CC9933;
     text-transform: uppercase;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     margin-left: 10px;
     border-left: 1px solid #CC9933;
     padding: 8px 0 10px 8px;
@@ -365,12 +372,14 @@ header {
 }
 
 .slider-bot-text > div {
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 .slider-bot-text span {
     color: #CC9933;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 .slider-bot-text .global-ico {
@@ -460,7 +469,8 @@ header {
 #pt-text {
     margin-right: 15px;
     color: #CC9933;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     text-transform: uppercase;
     font-size: 12px;
 }
@@ -498,7 +508,8 @@ header {
 .orm-title {
     color: #E6E6E6;
     font-size: 10px;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 #table-main {
@@ -511,7 +522,8 @@ header {
 
 .one-contry-f {
     font-size: 10px;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     color: #fff;
     padding: 10px;
     cursor: pointer;
@@ -686,7 +698,8 @@ header {
 .tocirs-koef .tocirsmt-line {
     background: #CC9933;
     color: #000;
-    font-family: hrlB;
+    /*font-family: hrlB;*/
+    font-family: sans-serif;
     border-radius: 3px;
     cursor: pointer;
 }
@@ -698,7 +711,8 @@ header {
 #pop-sob-title {
     font-size: 8px;
     text-transform: uppercase;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     padding: 5px 15px;
     background: #087537;
     border-radius: 5px;
@@ -797,7 +811,8 @@ header {
 
 .psko-number {
     font-size: 12px;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 .all-pop-sob {
@@ -826,7 +841,8 @@ header {
     display: flex;
     align-items: center;
     font-size: 10px;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     cursor: pointer;
 }
 
@@ -845,7 +861,8 @@ header {
     justify-content: space-between;
     align-items: center;
     font-size: 9px;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     margin-bottom: 20px;
 }
 
@@ -866,7 +883,11 @@ header {
     padding: 6px 8px;
     border-radius: 5px;
     margin-right: 10px;
-    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /*cursor: pointer;*/
 }
 
 .frb-one-opts {
@@ -1011,7 +1032,8 @@ header {
     padding: 2px 5px;
     border-radius: 3px;
     text-transform: uppercase;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 .torir-status span.s-blue {
@@ -1043,7 +1065,8 @@ header {
 #lk-left {
     width: 20%;
     font-size: 12px;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 #lk-left .lklm-item {
@@ -1083,7 +1106,8 @@ header {
 }
 
 .lkt-filter {
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     margin-bottom: 10px;
     text-transform: uppercase;
     font-size: 9px;
@@ -1133,7 +1157,8 @@ header {
     border-radius: 10px;
     background: #087537;
     text-transform: uppercase;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 .lkt-row:last-child {
@@ -1182,7 +1207,8 @@ header {
 }
 
 .lkrw-title {
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     text-transform: uppercase;
     margin-bottom: 20px;
 }
@@ -1275,7 +1301,8 @@ header {
 #lk-name {
     text-transform: uppercase;
     font-size: 20px;
-    font-weight: helB;
+    /*font-weight: helB;*/
+    font-family: sans-serif;
 }
 
 #lk-lk-bal-stat {
@@ -1289,17 +1316,19 @@ header {
     padding: 10px 25px 10px 0;
     border-right: 1px solid #E6E6E6;
     font-size: 16px;
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 #lk-bal div {
-    font-family: helB;
+    /*font-family: helB;*/
+    font-family: sans-serif;
     padding: 5px 0;
 }
 
 #lk-bal span {
-    color: #CC9933;
-    font-family: helB;
+    color: #CC9933;/*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 #lk-bal .global-ico {
@@ -1324,8 +1353,8 @@ header {
     border-radius: 5px;
     background: #CC9933;
     text-transform: uppercase;
-    font-size: 12px;
-    font-family: helB;
+    font-size: 12px;/*font-family: helB;*/
+    font-family: sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1337,8 +1366,8 @@ header {
     padding-top: 30px;
 }
 
-#lk-lk-menu-title {
-    font-family: helB;
+#lk-lk-menu-title {/*font-family: helB;*/
+    font-family: sans-serif;
     text-transform: uppercase;
     font-size: 12px;
     margin-bottom: 15px;
@@ -1358,8 +1387,8 @@ header {
     border-radius: 5px;
     background: #087537;
     text-transform: uppercase;
-    font-size: 12px;
-    font-family: helB;
+    font-size: 12px;/*font-family: helB;*/
+    font-family: sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1390,8 +1419,8 @@ header {
 
 .lkao-title {
     color: #CC9933;
-    font-size: 22px;
-    font-family: helB;
+    font-size: 22px;/*font-family: helB;*/
+    font-family: sans-serif;
     margin-bottom: 20px;
     line-height: 1.3;
 }
@@ -1406,8 +1435,8 @@ header {
 }
 
 .lkaot-title {
-    color: #CC9933;
-    font-family: helB;
+    color: #CC9933;/*font-family: helB;*/
+    font-family: sans-serif;
     margin-bottom: 10px;
 }
 
@@ -1435,15 +1464,15 @@ header {
 }
 
 #lk-vip-card-number {
-    font-size: 24px;
-    font-family: Arial;
+    font-size: 24px;/*font-family: helB;*/
+    font-family: sans-serif;
     color: #000;
     margin-bottom: 15px;
 }
 
 #lk-vip-card-status {
-    font-size: 15px;
-    font-family: Arial;
+    font-size: 15px;/*font-family: helB;*/
+    font-family: sans-serif;
     color: #000;
 }
 
@@ -1469,8 +1498,8 @@ header {
 }
 
 .lkvcso-title {
-    color: #CC9933;
-    font-family: helB;
+    color: #CC9933;/*font-family: helB;*/
+    font-family: sans-serif;
     font-size: 18px;
     text-transform: uppercase;
     margin-bottom: 10px;
@@ -1500,8 +1529,8 @@ header {
     font-size: 10px;
 }
 
-#lk-vip-r-text-title {
-    font-family: helB;
+#lk-vip-r-text-title {/*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 #lk-vip-r-text-title span {
@@ -1561,21 +1590,21 @@ header {
 }
 
 #lkconts-title {
-    text-transform: uppercase;
-    font-family: helB;
+    text-transform: uppercase;/*font-family: helB;*/
+    font-family: sans-serif;
     font-size: 12px;
     text-align: center
 }
 
 .lkconts-one {
-    font-size: 10px;
-    font-family: helB;
+    font-size: 10px;/*font-family: helB;*/
+    font-family: sans-serif;
     margin-bottom: 15px;
 }
 
 .lkconts-one span {
-    color: #CC9933;
-    font-family: helB;
+    color: #CC9933;/*font-family: helB;*/
+    font-family: sans-serif;
 }
 
 .lkconts-one .global-ico {
