--- a/src/index.css
+++ b/src/index.css
@@ -492,12 +492,21 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 10px 0 12px;
+    justify-content: space-between;
+    padding: 20px 20px;
     background: #087537;
     border-radius: 5px;
     cursor: pointer;
     margin-right: 8px;
+    font-weight: bold;
+    position: relative;
+}
+
+.one-rec-menu img {
+    position: absolute;
+    top: 7px;
+    width: 30px;
+    right: 26px;
 }
 
 .one-rec-menu .global-ico {
@@ -510,6 +519,8 @@ header {
     font-size: 10px;
     /*font-family: helB;*/
     font-family: sans-serif;
+    position: absolute;
+    bottom: 8px;
 }
 
 #table-main {
@@ -533,6 +544,7 @@ header {
 
 .one-contry-f {
     font-size: 10px;
+    font-weight: bold;
     /*font-family: helB;*/
     font-family: sans-serif;
     color: #fff;
@@ -610,7 +622,7 @@ header {
 }
 
 .toc-title .global-ico {
-    height: 10px;
+    height: 16px;
     margin: 0 5px -1px 0;
 }
 
@@ -651,7 +663,7 @@ header {
 }
 
 .toc-i-time {
-    width: 20%;
+    width: 24%;
 }
 
 .toc-i-teams {
@@ -862,6 +874,10 @@ header {
     font-family: sans-serif;
     cursor: pointer;
 }
+
+/*.one-rcm-menu:hover {*/
+/*    background-color: lightgreen;*/
+/*}*/
 
 .one-rcm-menu:last-child {
     padding-bottom: 0;
