--- a/src/index.css
+++ b/src/index.css
@@ -824,6 +824,7 @@ header {
 }
 
 .psk-one {
+    cursor: pointer;
     padding: 5px 10px;
     border: 1px solid #E6E6E6;
     border-radius: 5px;
@@ -842,6 +843,7 @@ header {
     font-size: 12px;
     /*font-family: helB;*/
     font-family: sans-serif;
+    font-weight: 900;
 }
 
 .all-pop-sob {
@@ -1003,12 +1005,20 @@ header {
 .fr-search {
     width: 15%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding: 5px 7px;
     border: 1px solid #CC9933;
     border-radius: 5px;
+    max-height: 24px;
+    position: relative;
 }
+
+.fr-search div::-webkit-scrollbar {
+    display: none;
+}
+
 
 .fr-search .global-ico {
     width: 10px;
