--- a/src/index.css
+++ b/src/index.css
@@ -703,7 +703,7 @@ header {
 .toc-i-right-side {
     width: 68%;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: end;
 }
 
@@ -719,6 +719,7 @@ header {
 }
 
 .tocirs-flcol {
+    /*border: 1px solid white;*/
     width: 22%;
     padding: 0 0 0 2%;
     white-space: nowrap;
@@ -726,6 +727,8 @@ header {
 
 .tocirs-matchtime {
     border-left: 1px solid #E6E6E6;
+    display: flex;
+    align-items: center;
 }
 
 .tocirs-matchtime .tocirsmt-title {
@@ -1112,6 +1115,10 @@ header {
 
 .torir-status span.s-red {
     background: #CC3300;
+}
+
+.torir-status span.s-orange {
+    background: #CD7F32;
 }
 
 .torir-comment {
@@ -1796,6 +1803,7 @@ header {
 .modal_info .league {
     flex: 1;
     display: flex;
+    font-weight: bold;
     justify-content: center;
     padding-left: 0;
     /*align-items: center;*/
@@ -1826,17 +1834,30 @@ header {
     font-weight: bold;
 }
 
-.modal_info .teams {
-    flex: 2;
-}
+/*.modal_info .team span {*/
+/*    flex: 1;*/
+/*    border: 1px solid white;*/
+/*}*/
 
 .modal_info .league {
     margin-top: 12px;
 }
 
 .modal_info .teams .status {
-    margin-top: 10px;
-    background-color: orange;
+    margin-top: 12px;
+    color: #CD7F32;
+    font-weight: 600;
+    padding: 4px 6px 0 4px;
+    background-color: transparent;
+    font-size: 10px;
+    width: 16%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #CD7F32;
+    border-radius: 8px;
 }
 
 .modal_info .teams .count {
@@ -1906,11 +1927,13 @@ header {
 
 .modal_start button {
     width: 60%;
-    height: 70%;
     background-color: green;
     color: white;
     border-radius: 8px;
     transition: .4s;
+    position: absolute;
+    height: 46px;
+    bottom: 20px;
 }
 
 .modal_start button:hover {
@@ -1930,10 +1953,6 @@ input[type=number] {
 }
 
 
-
-
-
-
 *::-webkit-scrollbar,
 *::-webkit-scrollbar-thumb {
     width: 0;
@@ -1945,3 +1964,42 @@ input[type=number] {
 *::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 0 10px;
 }
+
+
+.times {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    font-size: 22px;
+    cursor: pointer;
+    padding: 6px;
+    background: red;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    transition: .6s;
+    overflow: auto;
+}
+
+.times:hover {
+    background-color: darkred;
+}
+
+.linear-wipe {
+    animation: color-change 18s infinite;
+    /*font-size: 56px;*/
+}
+
+@keyframes color-change {
+    0% { color: #ff7b00; }
+    20% { color: #ffb300; }
+    40% { color: #0091ff; }
+    60% { color: #00ffff; }
+    80% { color: #2f00ff; }
+    100% { color: #ff2f00; }
+}
+
+
