--- a/src/index.css
+++ b/src/index.css
@@ -1243,19 +1243,42 @@ header {
 }
 
 .lktr-date {
-    width: 15%;
+    /*border: 1px solid white;*/
+    justify-content: center;
+    align-items: center;
+    /*width: 13%;*/
+    display: flex;
+    flex: 2;
+
 }
 
 .lktr-time {
-    width: 27%;
+    /*border: 1px solid white;*/
+    justify-content: center;
+    align-items: center;
+    /*width: 25%;*/
+    display: flex;
+    flex: 1;
 }
 
 .lktr-type {
-    width: 28%;
+    /*border: 1px solid white;*/
+    justify-content: center;
+    align-items: center;
+    /*width: 26%;*/
+    display: flex;
+    flex: 4;
+
 }
 
 .lktr-sum {
-    width: 15%;
+    /*border: 1px solid white;*/
+    justify-content: center;
+    align-items: center;
+    /*width: 13%;*/
+    display: flex;
+    flex: 1.5;
+
 }
 
 .lktr-sum .global-ico, .lktr-result .global-ico {
@@ -1264,7 +1287,32 @@ header {
 }
 
 .lktr-result {
-    width: 15%;
+    /*border: 1px solid white;*/
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex: 1;
+
+    /*width: 13%;*/
+}
+
+.lktr-pari-name {
+    /*border: 1px solid white;*/
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+
+    /*width: 10%;*/
+}
+
+.lktr-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*border: 1px solid white;*/
+    flex: 5;
+
 }
 
 
@@ -1532,7 +1580,7 @@ header {
 }
 
 #lk-vip-card {
-    /*background: url(images/card.png) center top no-repeat;*/
+    background: url(assets/images/card.png) center top no-repeat;
     background-size: 100% auto;
 }
 
