--- a/src/index.css
+++ b/src/index.css
@@ -515,6 +515,7 @@ header {
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
+    margin-right: 10px;
 }
 
 .one-rec-menu img {
@@ -1243,42 +1244,46 @@ header {
 }
 
 .lktr-date {
-    /*border: 1px solid white;*/
     justify-content: center;
     align-items: center;
-    /*width: 13%;*/
-    display: flex;
-    flex: 2;
-
-}
-
-.lktr-time {
-    /*border: 1px solid white;*/
-    justify-content: center;
-    align-items: center;
-    /*width: 25%;*/
     display: flex;
     flex: 1;
 }
 
-.lktr-type {
-    /*border: 1px solid white;*/
+.lktr-time {
     justify-content: center;
     align-items: center;
-    /*width: 26%;*/
     display: flex;
-    flex: 4;
+    flex: 0.75;
+}
 
+.lktr-type {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex: 1;
+}
+
+
+.lktr-type-title {
+    justify-content: flex-end;
+    align-items: center;
+    display: flex;
+    flex: 1;
 }
 
 .lktr-sum {
-    /*border: 1px solid white;*/
     justify-content: center;
     align-items: center;
-    /*width: 13%;*/
+    display: flex;
+    flex: 1;
+}
+
+.lktr-sum-title {
+    justify-content: center;
+    align-items: center;
     display: flex;
     flex: 1.5;
-
 }
 
 .lktr-sum .global-ico, .lktr-result .global-ico {
@@ -1287,32 +1292,60 @@ header {
 }
 
 .lktr-result {
-    /*border: 1px solid white;*/
     justify-content: center;
     align-items: center;
     display: flex;
-    flex: 1;
-
-    /*width: 13%;*/
+    flex: 1.5;
 }
 
 .lktr-pari-name {
-    /*border: 1px solid white;*/
     display: flex;
-    flex: 1;
+    flex: 1.3;
     justify-content: center;
     align-items: center;
+    padding-right: 20px;
+    padding-left: 0;
+}
 
-    /*width: 10%;*/
+.lktr-pari-name-title {
+    display: flex;
+    flex: 1.2;
+    justify-content: flex-end;
+    align-items: center;
+    padding-left: 10px;
 }
 
 .lktr-name {
     display: flex;
+    /*justify-content: center;*/
+    padding-left: 10px;
+    align-items: center;
+    flex: 2.3;
+}
+
+.lktr-name-title{
+    /*border: 1px solid white;*/
+    text-align: center;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex: 1.25;
+}
+
+.lktr-kf {
+    display: flex;
     justify-content: center;
     align-items: center;
-    /*border: 1px solid white;*/
-    flex: 5;
+    flex: 1;
+    /*padding-right: 9px;*/
+}
 
+.lktr-kf-title {
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
 }
 
 
@@ -1814,12 +1847,14 @@ header {
 }
 
 .totals {
-    /*border: 1px solid white;*/
     display: flex;
-    /*flex-wrap: wrap;*/
     flex-direction: column;
     text-align: center;
-    /*padding: 0 180px;*/
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin: auto;
+    /*cursor: pointer;*/
 }
 
 .totals h3 {
@@ -1862,8 +1897,7 @@ header {
 }
 
 .modal_info .totals {
-    /*border: 1px solid white;*/
-    flex: 1;
+    width: 100%;
     flex-direction: row;
     display: flex;
     align-items: center;
@@ -2051,3 +2085,52 @@ input[type=number] {
 }
 
 
+
+.trigger-button {
+    background: transparent;
+    color: #fff;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    width: 200px;
+    transition: 1s;
+}
+
+.trigger-button:hover {
+    background-color: coral;
+}
+
+.dropdown-wrapper {
+    position: relative;
+    width: 200px;
+}
+
+.dropdown-wrapper .dropdown {
+    background: transparent;
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    /*font-family: "Open Sans";*/
+    font-size: 22px;
+    display: flex;
+    align-items: center;
+}
+
+ul {
+    background: transparent;
+    color: #000000;
+    list-style: none;
+    margin: 0;
+    font-size: 18px;
+    overflow: hidden;
+    height: 0px;
+    transition: height 0.3s ease;
+    padding: 0;
+}
+
+ul.active {
+    height: 280px;
+    overflow: auto;
+}
