--- a/src/index.css
+++ b/src/index.css
@@ -1323,7 +1323,7 @@ header {
     flex: 2.3;
 }
 
-.lktr-name-title{
+.lktr-name-title {
     /*border: 1px solid white;*/
     text-align: center;
     display: flex;
@@ -2076,14 +2076,25 @@ input[type=number] {
 }
 
 @keyframes color-change {
-    0% { color: #ff7b00; }
-    20% { color: #ffb300; }
-    40% { color: #0091ff; }
-    60% { color: #00ffff; }
-    80% { color: #2f00ff; }
-    100% { color: #ff2f00; }
+    0% {
+        color: #ff7b00;
+    }
+    20% {
+        color: #ffb300;
+    }
+    40% {
+        color: #0091ff;
+    }
+    60% {
+        color: #00ffff;
+    }
+    80% {
+        color: #2f00ff;
+    }
+    100% {
+        color: #ff2f00;
+    }
 }
-
 
 
 .trigger-button {
@@ -2176,11 +2187,13 @@ ul.active {
 }
 
 #mobile-header {
-    background-color: transparent;
+    background-color: black;
     box-shadow: 0 8px 6px -6px black;
     padding: 0;
     height: 52px;
     padding-right: 12px;
+    position: fixed;
+    width: 100%;
 }
 
 @media (min-width: 1441px) {
@@ -2213,12 +2226,12 @@ ul.active {
     #mh-slider {
         display: none;
     }
+
     /*    flex-direction: column;*/
     /*    width: 100%;*/
     /*}*/
-
     #mh-slider-menu {
-        margin-top: 8px;
+        margin-top: 70px;
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -2277,19 +2290,79 @@ ul.active {
 
     .toc-i-left-side {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 33%;
+        /*flex-direction: row;*/
+        /*align-items: center;*/
+        /*width: 33%;*/
+        height: 100%;
+        flex-direction: column;
+        /*border: 1px solid white;*/
+        justify-content: space-between;
+        /*height: 100%;*/
+        /*justify-content: space-between;*/
+    }
+
+    .gi-star {
+        display: none;
+    }
+
+    .toc-i-time {
+        /*flex: auto;*/
+        font-size: 16px;
+        width: 100%;
+        /*border: 1px solid white;*/
+    }
+
+    .toc-i-teams {
+        /*flex: 1;*/
+        margin-top: 18px;
+        width: 100%;
+        /*border: 1px solid white;*/
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+
+    .toc-i-teams div img {
+        height: 24px;
     }
 
     .toc-i-right-side {
         width: 67%;
         display: flex;
         flex-direction: column;
+        /*border: 1px solid white;*/
     }
+
+    /*.toc-i-left-side::after {*/
+    /*    display: none;*/
+    /*}*/
 
     .tocirs-someinfo {
         width: 100%;
+        /*border: 2px solid yellow;*/
+        display: flex;
+        justify-content: center;
+    }
+
+    .tocirs-matchtime {
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 12px;
+        border: none;
+    }
+
+    .tocirs-koef {
+        width: 70%;
+        height: 50px;
+        /*border: 1px solid white;*/
+    }
+
+    .tocirs-koef div {
+        height: 40%;
+        font-size: 12px;
+        font-weight: bold;
     }
 
     .totals {
@@ -2299,7 +2372,6 @@ ul.active {
     /*#two-left {*/
     /*    max-height: 200px;*/
     /*}*/
-
     .table-one-cat {
         height: 800px;
         overflow-y: scroll;
@@ -2340,6 +2412,14 @@ ul.active {
         flex-direction: column;
     }
 
+    #lk-lk-info {
+        flex-direction: column;
+    }
+
+    #lk-name {
+        font-size: 0.8rem;
+    }
+
     .lk-vip-col {
         width: 100%;
     }
@@ -2350,5 +2430,67 @@ ul.active {
 
     .auth-form {
         width: 100%;
+    }
+
+    button {
+        border: none;
+    }
+
+    #pop-sob {
+        /*margin-top: 20px;*/
+        -webkit-box-shadow: -2px -15px 15px 4px rgba(34, 60, 80, 0.72);
+        -moz-box-shadow: -2px -15px 15px 4px rgba(34, 60, 80, 0.72);
+        box-shadow: -2px -15px 15px 4px rgba(34, 60, 80, 0.72);
+    }
+
+    #pop-sob-menu {
+        /*border: 1px solid white;*/
+        height: 40px;
+    }
+
+    #pop-sob-title {
+        height: 40px;
+        padding-top: 12px;
+        font-size: 14px;
+        text-align: center;
+        font-weight: bold;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
+
+    .one-pop-sob {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .pop-sob-title-in {
+        height: 30px;
+        font-size: 12px;
+        padding-top: 10px;
+    }
+
+    .pop-sob-teams {
+        width: 88%;
+        display: flex;
+        flex-direction: column;
+        font-size: 22px;
+        font-weight: bold;
+    }
+
+    .pop-sob-teams img {
+        height: 32px;
+    }
+
+    .pop-sob-koef {
+        height: 60px;
+    }
+
+    .psko-title {
+        font-size: 14px;
+        /*border: 1px solid white;*/
+    }
+
+    .psko-number {
+        font-size: 18px;
     }
 }
