--- a/src/index.css
+++ b/src/index.css
@@ -2195,6 +2195,7 @@ ul.active {
     position: fixed;
     z-index: 9999;
     width: 100%;
+    top: 0;
 }
 
 @media (min-width: 1441px) {
@@ -2219,9 +2220,10 @@ ul.active {
     }
 
     #mid-header {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
+        display: none;
+        /*display: flex;*/
+        /*flex-direction: column;*/
+        /*width: 100%;*/
     }
 
     #mh-slider {
@@ -2259,11 +2261,12 @@ ul.active {
 
     #content-wr {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         width: 100%;
     }
 
     #two-left {
+        margin-top: 60px;
         width: 100%;
     }
 
@@ -2374,7 +2377,7 @@ ul.active {
     /*    max-height: 200px;*/
     /*}*/
     .table-one-cat {
-        height: 800px;
+        max-height: 800px;
         overflow-y: scroll;
         width: 100%;
     }
@@ -2438,7 +2441,7 @@ ul.active {
     }
 
     #pop-sob {
-        /*margin-top: 20px;*/
+        margin-top: 60px;
         -webkit-box-shadow: -2px -15px 15px 4px rgba(34, 60, 80, 0.72);
         -moz-box-shadow: -2px -15px 15px 4px rgba(34, 60, 80, 0.72);
         box-shadow: -2px -15px 15px 4px rgba(34, 60, 80, 0.72);
@@ -2493,5 +2496,23 @@ ul.active {
 
     .psko-number {
         font-size: 18px;
+    }
+
+    .auth-form {
+        margin-top: 200px;
+        height: 100%;
+    }
+
+    .frb-one-f {
+        width: 95vw;
+        border: 1px solid #E6E6E6;
+        background: #087537;
+        padding: 6px 8px;
+        border-radius: 5px;
+        margin-right: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
