--- a/src/index.css
+++ b/src/index.css
@@ -2159,6 +2159,7 @@ ul.active {
     bottom: 0;
     padding-left: 12px;
     padding-right: 12px;
+    z-index: 999;
     /*left: 14px;*/
     /*right: 14px;*/
 
