--- a/src/index.css
+++ b/src/index.css
@@ -2803,6 +2803,35 @@ ul.active {
         border-radius: 14px;
         margin-top: 12px;
     }
+
+
+    .error {
+        /*border: 1px solid white;*/
+        padding: 0 12px;
+    }
+
+    .error h1 {
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+
+    .error p {
+        font-size: 18px;
+        margin-bottom: 12px;
+    }
+
+    .error button {
+        margin-top: 42px;
+        font-size: 24px;
+        padding: 8px 16px;
+        border-radius: 8px;
+        background-color: #cc9933;
+    }
+
+    .error .advice {
+        font-size: 20px;
+        font-weight: 600;
+    }
 }
 
 
@@ -2924,4 +2953,36 @@ ul.active {
     border: none;
 }
 
+.error {
+    /*border: 1px skyblue solid;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 120px;
+}
 
+.error h1 {
+    font-weight: 600;
+    font-size: 46px;
+    margin-bottom: 56px;
+}
+
+.error p {
+    font-size: 22px;
+    margin-bottom: 22px;
+}
+
+.error button {
+    margin-top: 42px;
+    font-size: 24px;
+    padding: 8px 16px;
+    border-radius: 8px;
+    background-color: #cc9933;
+    border: none;
+    cursor: pointer;
+}
+
+.error .advice {
+    font-size: 24px;
+    font-weight: 600;
+}
