--- a/src/index.css
+++ b/src/index.css
@@ -1786,11 +1786,13 @@ header {
 }
 
 .auth-form {
+    /*border: 1px solid white;*/
+    height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 60%;
-    height: 240px;
+    /*height: 240px;*/
     margin: auto;
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 33%);
@@ -1799,7 +1801,6 @@ header {
 }
 
 .auth-form input {
-    height: ;
     font-size: 24px;
     border: none;
     border-radius: 8px;
@@ -1816,6 +1817,7 @@ header {
 }
 
 .auth-form button {
+    border: none;
     height: 60px;
     background-color: green;
     outline: none;
@@ -1828,6 +1830,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 24px;
 }
 
 .auth-form button:hover {
