--- a/src/index.css
+++ b/src/index.css
@@ -2350,6 +2350,8 @@ ul.active {
 
     #table-main {
         width: 100%;
+        height: 800px;
+        /*border: 1px solid white;*/
     }
 
     .toc-item {
